--- a/src/app/dev-articles/dev-articles.component.css
+++ b/src/app/dev-articles/dev-articles.component.css
@@ -24,8 +24,14 @@
   }
 
   .main-content {
-    height: 80vh;
+    height: 100%;
     background-color: var(--background);
     padding: 6rem 4rem 0 4rem;
+
+    .card-layout {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      gap: 4rem 2rem
+    }
   }
 }
