--- a/src/app/dev-articles/components/card/card.component.html
+++ b/src/app/dev-articles/components/card/card.component.html
@@ -7,8 +7,20 @@
     alt="article header picture"
   />
   <div class="content">
-    <div class="author">{{ article.author }}</div>
+    <div class="author">
+      <app-avatar [name]="article.author" />
+      <div class="details">
+        <div class="author-name">{{ article.author }}</div>
+        <div class="date-added">{{ article.dateAdded | date: "d MMM" }}</div>
+      </div>
+    </div>
     <div class="title">{{ article.title }}</div>
-    <div class="likes">{{ article.likes }}</div>
+    <div class="likes">
+      <button>LIKE</button>
+      <div class="number-of-likes">
+        <img [ngSrc]="'assets/heart-icon.svg'" [height]="30" [width]="30" alt="heart icon" />
+        {{ article.likes }} likes
+      </div>
+    </div>
   </div>
 </div>
