--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,13 @@
-body,html {
+body,
+html {
   margin: 0;
   padding: 0;
+
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
+
 * {
   box-sizing: border-box;
 }
