--- a/src/app/dev-articles/dev-articles.component.html
+++ b/src/app/dev-articles/dev-articles.component.html
@@ -2,7 +2,7 @@
   <header>
     <div class="header-content">
       <h1>dev articles</h1>
-      <div class="filter">Filter</div>
+      <app-filter (filterChanged)="filterArticles($event)" (sortChanged)="sortArticles($event)" (latestOnlyChanged)="filterLatest($event)"/>
     </div>
   </header>
 
