--- a/src/app/dev-articles/components/filter/filter.component.html
+++ b/src/app/dev-articles/components/filter/filter.component.html
@@ -10,6 +10,7 @@
       type="text"
       [formControl]="filter"
       placeholder="Filter by title, author..."
+      data-testid="filter-input"
     />
   </div>
   <select [formControl]="sort">
