--- a/src/app/dev-articles/components/card/card.component.css
+++ b/src/app/dev-articles/components/card/card.component.css
@@ -1,16 +1,23 @@
+:host {
+  height: 100%;
+  width: 100%;
+}
+
 .card {
   display: flex;
   flex-direction: column;
-  max-width: 300px;
-  height: 300px;
   border-right: 1rem;
+  width: 100%;
+  height: 100%;
 
   img {
     border-radius: 10px 10px 0 0;
+    height: 120px;
   }
 
   .content {
     height: 100%;
+    min-height: 200px;
     background-color: #ffffff;
     border-radius: 0 0 10px 10px;
     padding: 1.5rem;
@@ -53,9 +60,10 @@
         cursor: pointer;
       }
 
-      button:hover, button.liked {
+      button:hover,
+      button.liked {
         background-color: var(--primary);
-        color: #ffffff
+        color: #ffffff;
       }
 
       .number-of-likes {
@@ -65,6 +73,7 @@
         gap: 0.5rem;
 
         img {
+          height: 100%;
           transform: scale(0.75);
         }
       }
